<resources>
    <string name="app_name">Dira</string>
    <string name="dira_user">Anon</string>
    <string name="rooms">Rooms</string>
    <string name="you_prefix">You</string>
    <string name="read">Read</string>
    <string name="not_read">Not read</string>
    <string name="rooms_list_last">That’s all rooms stored on device</string>
    <string name="no_messages">History is empty</string>
    <string name="room_last_not_read"> (Not read)</string>
    <string name="join_room">Join room</string>
    <string name="enter_invitation_code">Enter invitation code</string>
    <string name="tip_invitation_code_title">How to get invite code?</string>
    <string name="tip_invitation_code_text">Ask someone from room for the code, then type it above. Invitation code usually have expiration time.</string>
    <string name="create_room">Create room</string>
    <string name="room_name">Name of room</string>
    <string name="room_name_hint">My roblox friends</string>
    <string name="first_room_message">First message of room</string>
    <string name="first_room_message_hint">how can I get more robux</string>
    <string name="room_server">Room server</string>
    <string name="updates_expire_time">Updates expire time</string>
    <string name="room_secret">Room secret name</string>
    <string name="host_server">Host server</string>
    <string name="official_host_server">Official server</string>
    <string name="tip_room_title">What is room?</string>
    <string name="tip_room_text">Room is a place for chatting. Anyone in room has all access to it and cannot be kicked from it, because room secret never changes and every room member has access to it.</string>
    <string name="room_type_public">Public room</string>
    <string name="room_type_private">Private room</string>
    <string name="your_personality">Your personality</string>
    <string name="your_picture">Your picture</string>
    <string name="change">Change</string>
    <string name="your_nickname">Your name</string>
    <string name="your_nickname_hint">dreestoon</string>
    <string name="your_id">Your ID</string>
    <string name="your_id_hint">Veryyyy long randomized text</string>
    <string name="your_id_tip">With ID Dira can know who is who. Changing ID is like recreating your account in all chats.</string>
    <string name="personality_tip_title">What is personality?</string>
    <string name="personality_tip_text">It’s your default account information applied to new rooms. You can change your name or avatar for specific room.</string>
    <string name="personality_settings_button">Settings and appearance</string>
    <string name="you">You</string>
    <string name="unknown">Unknown</string>
    <string name="type_message_hint">Message</string>
    <string name="members_count">%s members</string>
    <string name="attachment_large_title">This attachment too large</string>
    <string name="download">Download</string>
    <string name="user_status_typing">%s is typing</string>
    <string name="users_status_typing">%s are typing</string>
    <string name="user_status_voice">%s is recording voice</string>
    <string name="users_status_voice">%s are recording voice</string>
    <string name="user_status_bubble">%s is recording bubble</string>
    <string name="users_status_bubble">%s are recording bubble</string>
    <string name="user_status_picking_file">%s is picking attachment</string>
    <string name="users_status_picking_file">%s are picking attachment</string>
    <string name="user_status_sending_file">%s is sending attachment</string>
    <string name="users_status_sending_file">%s are sending attachment</string>
    <string name="recording_prefix">Recording</string>
    <string name="recording_preparing">Preparing camera</string>
    <string name="recording_tip_stop">Release to cancel recording</string>
    <string name="recording_tip_send">Release to send message</string>
    <string name="attachment_in_queue">(In queue)</string>
    <string name="media_gallery">Gallery</string>
    <string name="no_encryption">No encryption</string>
    <string name="room_encrypted">Encrypted room</string>
    <string name="waiting_person">waiting person to join</string>
    <string name="no_media">Nobody sent media in this room</string>
    <string name="no_voice">Nobody sent voice messages in this room</string>
    <string name="no_documents">Nobody sent files messages in this room</string>
    <string name="media">Media</string>
    <string name="voice">Voice</string>
    <string name="links">Links</string>
    <string name="documents">Documents</string>
    <string name="no_such_file">File not found</string>
    <string name="voice_item_text">%n, %d at %t</string>
    <string name="pinned_messages_title">Pinned messages</string>
    <string name="members_title">Members</string>
    <string name="notifications_enabled">Notifications has been enabled</string>
    <string name="notifications_disabled">Notifications has been disabled</string>
    <string name="members_status_pinging">Pinging...</string>
    <string name="members_status_online">Online</string>
    <string name="members_status_offline">Offline</string>
    <string name="edit_room">Edit room</string>
    <string name="room_picture">Room picture</string>
    <string name="edit_room_name">Room name</string>
    <string name="edit_room_host">Room host</string>
    <string name="edit_room_update_expire">Messages lifetime (hours)</string>
    <string name="edit_room_server_popup_title">Are you sure?</string>
    <string name="edit_room_server_popup_text">You will continue to receive messages only from those users who have also changed the server.</string>
    <string name="invitation_code">Invitation code</string>
    <string name="invitation_code_tip">This invitation code to %s will expire soon.</string>
    <string name="share_code_tip">Share this invitation code to allow people join this room.</string>
    <string name="unofficial_server">Unofficial server</string>
    <string name="memory_management_title">Memory management</string>
    <string name="memory_management_total_used">%s of storage used by Dira</string>
    <string name="memory_management_delete_videos">Delete videos</string>
    <string name="memory_management_delete_images">Delete images</string>
    <string name="memory_management_delete_profile_pics">Delete profile pics</string>
    <string name="memory_management_delete_unknown">Delete unknown files</string>
    <string name="memory_management_delete_messages">Delete messages</string>
    <string name="memory_management_delete_rooms">Delete all rooms</string>
    <string name="memory_management_loading">Calculating size...</string>
    <string name="memory_management_deleting">Cleaning up...</string>
    <string name="settings_title">Settings and appearance</string>
    <string name="settings_memory_managment">Memory management</string>
    <string name="settings_room_servers">Room servers</string>
    <string name="settings_file_servers">File servers</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="appearance_title">Appearance</string>
    <string name="chat_appearance_example_message_1">Now we are going somewhere far out of town.</string>
    <string name="chat_appearance_example_message_self_1">I don\'t know what\'s going on, but I think it\'s started...</string>
    <string name="chat_appearance_example_message_2">If an ant raises ten times its weight, then 50 grams of ants can be sent for a bottle of beer</string>
    <string name="chat_appearance_example_message_self_2">You do realize that you write just like a schoolboy and you have an anime on your avatar at the same time?</string>
    <string name="appearance_color_scheme">Color scheme</string>
    <string name="chat_appearance_background">Background</string>
    <string name="chat_appearance_pick_image">Pick image</string>
    <string name="account_edit">Edit</string>
    <string name="flow_title">Flow</string>
    <string name="flows_title">Flows</string>
    <string name="room_servers_title">Room servers</string>
    <string name="room_servers_official">Dira official server</string>
    <string name="room_servers_add">Add custom server</string>
    <string name="room_servers_add_hint">Server address</string>
    <string name="room_servers_add_button">Add</string>
    <string name="room_servers_popup_delete_server_title">Delete server</string>
    <string name="room_servers_popup_delete_server_text">If you delete the server, all rooms associated with it will stop receiving new messages and updates.</string>
    <string name="room_servers_popup_wrong_server_title">Wrong server</string>
    <string name="room_servers_popup_wrong_server_text">The server you are trying to add does not meet security requirements or contains a typo in the address.</string>
    <string name="room_servers_popup_mitm_title">Trust check</string>
    <string name="room_servers_popup_mitm_text">Any user server can be compromised, add only those servers that you are sure of. As soon as the server is added, your IP address will be disclosed</string>
    <string name="room_servers_add_tip">We strongly don’t recommend to use huge amount of servers, because each server equals new background connection that may affect your battery performance and traffic.</string>
    <string name="room_server_selector_title">Select server</string>
    <string name="downtime_title">You were offline</string>
    <string name="downtime_text">Dira was not working in background and you can miss messages and events</string>
    <string name="downtime_text_last_time">Last time Dira checked updates</string>
    <string name="downtime_you_missed">You missed messages</string>
    <string name="downtime_check_permissions">Fix</string>
    <string name="downtime_ignore">Ignore</string>
    <string name="downtime_default_info">Default expire time is 6</string>
    <string name="downtime_time">%s ago</string>
    <string name="time_unit_days">days</string>
    <string name="time_unit_day">day</string>
    <string name="time_unit_hours">hours</string>
    <string name="time_unit_hour">hour</string>
    <string name="time_unit_minutes">minutes</string>
    <string name="time_unit_minute">minute</string>
    <string name="less_than_a_minute">Less than a minute</string>
    <string name="room_encryption_title">Room encryption</string>
    <string name="room_encryption_key">Encryption key</string>
    <string name="room_encryption_no_key">No key</string>
    <string name="room_encryption_tip">Dira uses end-to-end encryption for messages and media files. Dira Protocol does not support key authorization.</string>
    <string name="room_encryption_renew">Renew key</string>
    <string name="room_encryption_renewing_title">Renewing key</string>
    <string name="room_encryption_renewing_waiting">Waiting for members (%d/%d)</string>
    <string name="room_encryption_renewing_status_unknown">Ready (Unknown user)</string>
    <string name="room_encryption_renewing_status_ready">Ready</string>
    <string name="room_encryption_renewing_status_waiting">Waiting</string>
    <string name="room_encryption_renewing_start">Start renewing</string>
    <string name="room_encryption_renewing_generating">Generating key with %d members... (%d sec)</string>
    <string name="room_encryption_success">Key has been renewed</string>
    <string name="room_encryption_cancel">Renewing has been cancelled</string>
    <string name="crash_title">We’re sorry, but...</string>
    <string name="crash_text">Fried chicken created an unexpected error</string>
    <string name="crash_button_reopen">Reopen app</string>
    <string name="crash_button_copy">Copy stack trace</string>
    <string name="title_explore">Explore</string>
    <string name="title_room_selector">Rooms</string>
    <string name="title_account">Account</string>
</resources>