<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_rounded_back"
    android:orientation="vertical"
    android:paddingHorizontal="22dp"
    android:paddingBottom="22dp">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="6dp"
        android:layout_gravity="center"
        android:layout_marginVertical="12dp"
        android:alpha="0.6"
        android:background="@drawable/trans_rounded" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/montserratbold"
        android:text="@string/downtime_title"
        android:textColor="@color/white"
        android:textSize="22sp" />


    <TextView
        android:id="@+id/invitation_code_tip"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/downtime_text"
        android:textColor="@color/light_gray"
        android:textSize="14sp" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/montserratbold"
        android:text="@string/downtime_text_last_time"
        android:textColor="@color/white"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_rect_semirounded"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/time_icon"
            android:layout_width="32dp"
            android:layout_weight="0"
            android:layout_height="match_parent"
            android:layout_marginRight="12dp"
            android:src="@drawable/ic_time"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:fontFamily="@font/montserratbold"
                android:text="0 days ago"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/time_subtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/downtime_you_missed"
                android:alpha="0.7"
                android:textColor="@color/white"
                android:textSize="12sp"
                />
        </LinearLayout>


        <com.diraapp.ui.components.dynamic.DynamicTextView
            android:id="@+id/check_permissions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:layout_weight="0"
            android:fontFamily="@font/montserratbold"
            android:text="@string/downtime_check_permissions"
            android:textColor="@color/accent"
            android:textSize="14sp"
            app:themeColor="accent"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/button_ignore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"

        android:fontFamily="@font/montserratsemibold"
        android:gravity="center"
        android:paddingHorizontal="18dp"
        android:alpha="0.8"
        android:src="@drawable/ic_next"
        android:text="@string/downtime_ignore"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>