<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppSlideTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/dark"
    tools:context=".ui.activities.PersonalityActivity">

    <com.diraapp.ui.components.dynamic.ThemeImageView
        app:themeImageColor="accent_image_button_color"
        android:id="@+id/button_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="?actionBarItemBackground"
        android:padding="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_save"
        app:layout_constraintTop_toBottomOf="@+id/button_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserratbold"
                android:text="@string/your_personality"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/your_picture"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:id="@+id/profile_picture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/placeholder" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/button_change_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/dark_rect"
                    android:fontFamily="@font/montserratsemibold"
                    android:gravity="center"
                    android:paddingHorizontal="18dp"
                    android:src="@drawable/ic_next"
                    android:text="@string/change"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/your_nickname"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nickname_text"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/dark_rect"
                android:fontFamily="@font/montserratsemibold"
                android:gravity="center"
                android:hint="@string/your_nickname_hint"
                android:inputType="text"
                android:maxLength="24"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/your_id"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/id_text"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/dark_rect"
                android:fontFamily="@font/montserratsemibold"
                android:gravity="center"
                android:hint="@string/your_id_hint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/your_id_tip"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/personality_tip_title"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/personality_tip_text"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/button_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/gray_rounded"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="22dp"
                android:paddingVertical="16dp">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="@string/personality_settings_button"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.diraapp.ui.components.dynamic.ThemeImageView
        android:id="@+id/button_save"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/accent_rounded"
        android:padding="10dp"
        android:src="@drawable/ic_check"

        app:themeImageColor="accent_button_color"
        app:themeBackgroundTint="accent_button_background"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2"
        app:srcCompat="@drawable/shadow_gradient" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:scaleY="-1"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/shadow_gradient" />
</androidx.constraintlayout.widget.ConstraintLayout>