<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_rounded_back"
    android:orientation="vertical"
    android:paddingHorizontal="22dp"
    android:paddingBottom="22dp">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="6dp"
        android:background="@drawable/gray_rounded"
        android:layout_gravity="center"
        android:layout_marginVertical="12dp"
        android:alpha="0.6"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/montserratbold"
        android:text="@string/room_encryption_title"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.diraapp.ui.components.dynamic.DynamicTextView
            android:id="@+id/encryption_key_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserratbold"
            android:text="@string/room_encryption_no_key"
            android:textColor="@color/accent"
            android:textSize="28sp"
            app:themeColor="accent_text" />

        <ImageView
            android:id="@+id/copy_encryption_code"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="12dp"

            android:background="?actionBarItemBackground"
            android:src="@drawable/ic_copy"
            app:tint="@color/white" />


    </LinearLayout>

    <TextView
        android:id="@+id/invitation_code_tip"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/room_encryption_tip"
        android:textColor="@color/light_gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/button_update_key"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:background="@drawable/dark_rect"
        android:fontFamily="@font/montserratsemibold"
        android:gravity="center"
        android:paddingHorizontal="18dp"
        android:src="@drawable/ic_next"
        android:text="@string/room_encryption_renew"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>