<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".ui.activities.CrashActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/crash_chicken" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView

            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_white" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/crash_title"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="24dp"

            android:fontFamily="@font/montserratsemibold"
            android:text="@string/crash_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/button_reopen"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="24dp"
            android:background="@drawable/accent_rounded"
            android:fontFamily="@font/montserratsemibold"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:text="@string/crash_button_reopen"
            android:textColor="@color/dark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/button_copy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="12dp"
            android:background="@drawable/dark_rect"
            android:fontFamily="@font/montserratsemibold"
            android:gravity="center"
            android:paddingHorizontal="18dp"
            android:src="@drawable/ic_next"
            android:text="@string/crash_button_copy"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>